--- a/hungerDelight/requirements.txt
+++ b/hungerDelight/requirements.txt
@@ -1,4 +1,3 @@
--r requirements.txt
 Django==3.1.1
 djangorestframework==3.12.1
 mysqlclient==2.0.1
@@ -7,3 +6,4 @@ pytest-django==3.10.0
 celery==5.0.0
 structlog==20.1.0
 django-silk==4.1.0
+locust==1.2.3
